--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lint:fix": "对src/.js文件进行lint，并尝试修复一些格式类的错误，语法类需要手动修复"
     },
     "dependencies": {
+        "@ant-design/icons-vue": "^7.0.1",
         "@types/qs": "^6.9.7",
         "axios": "^1.2.1",
         "dayjs": "^1.11.7",
@@ -41,7 +42,9 @@
         "@types/jsdom": "^20.0.0",
         "@types/node": "^16.11.68",
         "@types/nprogress": "^0.2.0",
+        "@vicons/antd": "^0.12.0",
         "@vicons/ionicons5": "^0.12.0",
+        "@vicons/utils": "^0.1.4",
         "@vitejs/plugin-vue": "^3.1.2",
         "@vitejs/plugin-vue-jsx": "^2.0.1",
         "@vue/eslint-config-prettier": "^7.0.0",
@@ -51,7 +54,7 @@
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
         "jsdom": "^20.0.1",
-        "naive-ui": "^2.34.2",
+        "naive-ui": "^2.39.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "rollup-plugin-visualizer": "^5.8.3",
