--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "preview": "vite preview --port 4173",
         "lint:type": "vue-tsc --noEmit --skipLibCheck",
         "lint:prettier": "npx prettier --write src/  --config ./.prettierrc.js",
-        "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
+        "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+        "typecheck": "vue-tsc --noEmit"
     },
     "scripts-info": {
         "start": "运行开发环境服务器",
@@ -35,7 +36,10 @@
         "vite-plugin-html": "^3.2.0",
         "vue": "^3.2.41",
         "vue-clipboard3": "^2.0.0",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "@bytemd/plugin-gfm": "latest",
+        "@bytemd/vue-next": "latest",
+        "bytemd": "latest"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
