--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     },
     "dependencies": {
         "@ant-design/icons-vue": "^7.0.1",
+        "@bytemd/plugin-gfm": "latest",
+        "@bytemd/vue-next": "latest",
         "@types/qs": "^6.9.7",
+        "@wangeditor/editor": "^5.1.23",
+        "@wangeditor/editor-for-vue": "^5.1.12",
         "axios": "^1.2.1",
+        "bytemd": "latest",
         "dayjs": "^1.11.7",
         "nprogress": "^0.2.0",
         "pinia": "^2.0.23",
@@ -36,10 +41,7 @@
         "vite-plugin-html": "^3.2.0",
         "vue": "^3.2.41",
         "vue-clipboard3": "^2.0.0",
-        "vue-router": "^4.1.5",
-        "@bytemd/plugin-gfm": "latest",
-        "@bytemd/vue-next": "latest",
-        "bytemd": "latest"
+        "vue-router": "^4.1.5"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
