--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@types/node": "^16.11.68",
         "@types/nprogress": "^0.2.0",
         "@vicons/antd": "^0.12.0",
+        "@vicons/fa": "^0.12.0",
         "@vicons/ionicons5": "^0.12.0",
         "@vicons/utils": "^0.1.4",
         "@vitejs/plugin-vue": "^3.1.2",
