--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "dayjs": "^1.11.7",
         "emoji-mart-vue-fast": "^15.0.2",
         "markdown-it": "^14.1.0",
+        "marked": "^14.1.2",
         "nprogress": "^0.2.0",
         "pinia": "^2.0.23",
         "qs": "^6.11.0",
