Modify login and registration issues

--- a/.env.development
+++ b/.env.development
@@ -12,10 +12,10 @@ VITE_APP_ROUTER_BASE = "/web/"
 VITE_APP_PUBLIC_URL = "/"
 
 # 请求地址，注：如果需要开启proxy转发，使用 /proxy_url
-VITE_APP_AXIOS_BASEURL = "https://mock.127516.com"
+VITE_APP_AXIOS_BASEURL = "http://192.168.10.7:8081/"
 
 # 代理域名，注：使用devServer.proxy时，需要设置 VITE_APP_AXIOS_BASEURL = /proxy_url
-VITE_APP_PROXY_URL = "https://mock.127516.com"
+VITE_APP_PROXY_URL = "http://192.168.10.7:8081/"
 
 # 删除所有console.log。 参数说明：0表示不启用；1表示启用
 VITE_APP_PURE_CONSOLE = 0
